[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/battle/actordetails/ActorConditionDetails.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
TabContainer/styles/panel = SubResource( 1 )

[node name="ActorConditionDetails" type="TabContainer"]
margin_right = 75.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
theme = SubResource( 2 )
tabs_visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionsContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 1
custom_constants/margin_bottom = 1

[node name="Scroll" type="ScrollContainer" parent="ConditionsContainer"]
margin_top = 1.0
margin_right = 75.0
margin_bottom = 23.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ConditionList" type="VBoxContainer" parent="ConditionsContainer/Scroll"]
margin_right = 75.0
size_flags_horizontal = 3

[node name="NoConditionsContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="NoConditionsContainer"]
margin_left = 13.0
margin_top = 8.0
margin_right = 61.0
margin_bottom = 15.0
text = "No Conditions"
